# chimera

./: .gitignore  CLAUDE.md  README.md  RESEARCH.md  SPEC.md  pyproject.toml  session_tables.md
.claude/: settings.json  statusline-command.sh
.claude/agents/: wandb-run-analyst.md
.claude/skills/commit/: SKILL.md
.claude/skills/optimize-training-throughput/: SKILL.md  throughput_probe.py
.claude/skills/wandb-metrics/: SKILL.md  pull_metrics.py
projects/_archive/: README.md
projects/_archive/chimera/: README.md  SPEC.md
projects/afhq/autoencoder/: main.ipynb  sweep.yaml  train.py
projects/autoencoder/: main.ipynb
projects/celeba_afhq/autoencoder/: benchmark.py  sweep.py  train.py
projects/celeba_afhq/dit/: train.py
projects/celeba_afhq/titok/: benchmark.py  sweep.py  train.py
projects/cifar10/autoencoder/: main.ipynb  sweep.yaml
projects/cifar10/classify/: main.ipynb  sweep.yaml  train.py
projects/classifier/: main.ipynb
projects/fineweb-edu/gpt/: bench.py  coord_check.py  main.ipynb  sweep.yaml  sweep_attn_res.yaml  sweep_mup.yaml  sweep_mup_124m.yaml  sweep_mup_ext.yaml  sweep_mup_wide.yaml  sweep_width_100M.yaml  throughput_bench.py  train.py
projects/fineweb-edu/sft/: main.ipynb  train.py
projects/grpo/: README.md  RESULTS.md  eval.py  train.py
projects/imagenet1k/: RESULTS.md  benchmark.py
projects/llm/: DATA.md
projects/llm/data/: README.md  browse.html  browse.py  build_mixture.py  main.ipynb  sources.py  tokenize_source.py  train_tokenizer.py
projects/llm/gpt/: bench.py  bpb.py  bpb_cache.json  coord_check.yaml  eval.html  lr_sweep.yaml  mfu_bench.py  train.py
projects/llm/sft/: main.ipynb  train.py
projects/mnist/autoencoder/: main.ipynb  notebook.ipynb  sweep.yaml  train.py
projects/mnist/classifier/: main.ipynb  train.py
projects/mnist/rectified_flow/: main.ipynb  notebook.ipynb  train.py
projects/mnist_autoencoder/: train.py
projects/mnist_rectified_flow/: train.py
projects/multistage/spatialencoder/: RESULTS.md  dcae.py  diagnostics.py  eval_sdvae.py  stage1.py
projects/multistage/titok/: RESULTS.md  titok.py
projects/text2image/: README.md  datamodule.py  prepare.py
projects/text2image/autoencoder/: benchmark.py  repa_cache.py  sweep.py  train.py
projects/text2image/dit/: train.py
projects/text2image/titok/: benchmark.py  sweep.py  train.py
projects/text8/gpt/: main.ipynb  sweep.yaml  train.py
projects/tiny-llm/data/: DATASETS.md  (+1 more)
projects/tinylm/: README.md
src/chimera/: __init__.py
tests/: test_attention.py  test_lm_harness.py  test_muon.py  test_public_api.py  test_text_artifacts.py  test_text_cache.py  test_text_catalog.py  test_text_datamodule.py  test_tokenizer.py  test_train.py  test_window_dataset.py
(+240 files in other folders)
