[project]
name = "chimera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Karan Ravindra", email = "21176108+karanravindra@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cut-cross-entropy>=25.1.1",
    "datasets>=3.0.0",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "lightning>=2.6.5",
    "lm-eval>=0.4.12",
    "lpips>=0.1.4",
    "matplotlib>=3.11.0",
    "mup>=1.0.0",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "tabulate>=0.10.0",
    "tokenizers>=0.20.0",
    "torch>=2.12.1",
    "torch-fidelity>=0.4.0",
    "torchinfo>=1.8.0",
    "torchmetrics[image]>=1.9.0",
    "torchvision>=0.27.1",
    "tqdm>=4.66.0",
    "wandb>=0.28.0",
]

[project.scripts]
chimera = "chimera:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
