[project]
name = "chimera"
version = "0.1.0"
description = "TinyLM training data, tokenizer, model components, and evaluation tools"
readme = "README.md"
authors = [
    { name = "Karan Ravindra", email = "21176108+karanravindra@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cut-cross-entropy>=25.1.1",
    "datasets>=3.0.0",
    "lightning>=2.6.5",
    "tokenizers>=0.20.0",
    "torch>=2.12.1",
    "torchinfo>=1.8.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
eval = [
    "lm-eval>=0.4.12",
    "pandas>=3.0.3",
    "transformers>=5.13.1",
]
notebook = [
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.11.0",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
]

[project.scripts]
chimera-data = "chimera.data.cli:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    "nbconvert>=7.17.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
